[package]
name = "hivecom-tm"
version = "0.1.0"
edition = "2018"

[dependencies]
askama = "0.9.0"
askama_escape = "0.10.1"
axum = "0.1.3"
dotenv = "0.15.0"
mysql_async = "0.28.0"
tokio = { version = "1.10.0", features = [ "full" ] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
chrono = "0.4.19"
tower-http = { version = "0.1.1", features = [ "fs", "trace" ] }
serde = "1.0.127"
serde_json = "1.0.66"
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.26"
anyhow = "1.0.43"
