[package]
name = "hivecom-tm"
version = "0.1.0"
edition = "2018"

[dependencies]
askama = "0.11.1"
askama_escape = "0.10.3"
axum = "0.5.17"
dotenv = "0.15.0"
mysql_async = "0.30.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
serde = "1.0.147"
serde_json = "1.0.87"
pest = "2.4.1"
pest_derive = "2.4.1"
thiserror = "1.0.37"
anyhow = "1.0.66"
time = { version = "0.3.17", features = ["formatting"] }
